github-event-sample/service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: event-display
  namespace: test
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: docker.io/daisyycguo/event_display-bb44423e21d22fe93666b961f6cfb013
